--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -21,4 +21,14 @@
         android:layout_marginStart="34dp"
         android:layout_marginTop="44dp"
         android:id="@+id/editText" />
+
+    <Button
+        android:text="Button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/editText"
+        android:layout_alignStart="@+id/editText"
+        android:layout_marginStart="19dp"
+        android:layout_marginTop="75dp"
+        android:id="@+id/ok_button" />
 </RelativeLayout>
